--- a/src/modules/about/about.page.html
+++ b/src/modules/about/about.page.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error cupiditate distinctio unde voluptatibus temporibus? Sit est beatae hic, eum iure eveniet nulla facilis dignissimos quod dicta delectus, labore saepe suscipit.
+        Balls
     </p>
     <p>
-        Obcaecati ea ducimus sapiente porro vero earum temporibus, molestias voluptatum quam animi voluptas commodi dolores exercitationem, ab odit neque veniam similique? Quae enim suscipit nihil? Culpa dolorum at enim quo.
+        Balls
     </p>
     <p>
-        Repellat similique error animi ipsam explicabo praesentium, placeat eos laudantium rerum dolorum nobis qui, reprehenderit laborum, quo sint. Ex facilis autem sequi eaque beatae, quis inventore porro dolores veritatis itaque?
+        Balls
     </p>
 </body>
 </html>
